# python-hatch-poc

./: .dockerignore  .editorconfig  .envrc.sample  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  404.html  Justfile  LICENSE  PLAYGROUND.md  README.md  index.html  invoke.yaml  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-experimental.in  requirements-test.in  requirements.in  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  check.yaml  ci-cd.yaml  dependencies.yml  docs.yml
contrib/: .ptpython_config.py  .pyenv_compile_env_brew  00-better_exceptions.py  00-set-traceback-mode.py  admincog.py  env-setup  mock_patch_checker.py  opencv-deps.sh  settings-vscode-bak.json  settings.json
docs/: index.md  license.md
hack/: vscode.sh
license/: index.html
lint-configs-python/python/: mypy.ini  pylintrc
search/: search_index.json
src/hatchpoc/: __init__.py  custom_types.py  settings.py  types.py
tasks/: __init__.py  ci.py  console.py  db.py  git.py  iops.py  local.py  program.py  symbols.py  utils.py  view.py
